--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@typescript-eslint/parser": "^5.29.0",
         "eslint": "^8.18.0",
         "eslint-plugin-react": "^7.30.1",
+        "html-webpack-plugin": "^5.5.0",
         "husky": "^8.0.1",
         "lint-staged": "^13.0.2",
         "prettier": "^2.7.1",
