--- a/package.json
+++ b/package.json
@@ -5,16 +5,21 @@
     "author": "cuirongfeng <cuirongfeng@intasect.com.cn>",
     "license": "MIT",
     "devDependencies": {
+        "@babel/core": "^7.18.5",
+        "@babel/preset-env": "^7.18.2",
+        "@babel/preset-typescript": "^7.17.12",
         "@types/express": "^4.17.13",
         "@types/node": "^18.0.0",
         "@typescript-eslint/eslint-plugin": "^5.29.0",
         "@typescript-eslint/parser": "^5.29.0",
+        "babel-loader": "^8.2.5",
         "eslint": "^8.18.0",
         "eslint-plugin-react": "^7.30.1",
         "html-webpack-plugin": "^5.5.0",
         "husky": "^8.0.1",
         "lint-staged": "^13.0.2",
         "prettier": "^2.7.1",
+        "rimraf": "^3.0.2",
         "ts-node": "^10.8.1",
         "typescript": "^4.7.4",
         "webpack": "^5.73.0",
