--- a/pro/package.json
+++ b/pro/package.json
@@ -1,13 +1,17 @@
 {
     "name": "pro",
     "version": "1.0.0",
-    "main": "index.js",
     "license": "MIT",
+    "scripts": {
+        "start": "webpack serve -c webpack.config.dev.ts",
+        "build": "rimraf dist && webpack -c webpack.config.prod.ts"
+    },
     "dependencies": {
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
+        "@babel/preset-react": "^7.17.12",
         "@types/react": "^18.0.14",
         "@types/react-dom": "^18.0.5"
     }
