--- a/pro/tsconfig.json
+++ b/pro/tsconfig.json
@@ -1,6 +1,6 @@
 {
+    "extends": "../tsconfig.json",
     "compilerOptions": {
-        "strict": true,
-        "esModuleInterop": true
+        "jsx": "react"
     }
 }
