--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,10 @@
     "name": "server",
     "version": "1.0.0",
     "license": "MIT",
+    "scripts": {
+        "start": "ts-node app.ts",
+        "build": "rimraf dist && webpack -c webpack.config.ts"
+    },
     "dependencies": {
         "express": "^4.18.1"
     }
