--- a/pro/package.json
+++ b/pro/package.json
@@ -7,12 +7,21 @@
         "build": "rimraf dist && webpack -c webpack.config.prod.ts"
     },
     "dependencies": {
+        "@emotion/react": "^11.9.3",
+        "@emotion/styled": "^11.9.3",
+        "@mui/material": "^5.8.6",
+        "classnames": "^2.3.1",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.3.0"
     },
     "devDependencies": {
         "@babel/preset-react": "^7.17.12",
         "@types/react": "^18.0.14",
-        "@types/react-dom": "^18.0.5"
+        "@types/react-dom": "^18.0.5",
+        "css-loader": "^6.7.1",
+        "less": "^4.1.3",
+        "less-loader": "^11.0.0",
+        "style-loader": "^3.3.1"
     }
 }
