--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
     "main": "index.js",
     "author": "cuirongfeng <cuirongfeng@intasect.com.cn>",
     "description": "摸鱼一个全栈，嘿嘿嘿",
-    "keywords": ["javascript", "nodejs", "webpack", "full-stack"],
+    "keywords": [
+        "javascript",
+        "nodejs",
+        "webpack",
+        "full-stack"
+    ],
     "repository": {
         "type": "git",
         "url": "git@github.com:LuKasCuiRongfeng/server.git"
