--- a/server/package.json
+++ b/server/package.json
@@ -8,5 +8,8 @@
     },
     "dependencies": {
         "express": "^4.18.1"
+    },
+    "devDependencies": {
+        "@types/express": "^4.17.13"
     }
 }
