--- a/pro/tsconfig.json
+++ b/pro/tsconfig.json
@@ -4,7 +4,8 @@
         "jsx": "react",
         "baseUrl": ".",
         "paths": {
-            "@/*": ["src/*"]
+            "@/*": ["src/*"],
+            "main/*": ["src/main/*"]
         }
     }
 }
