--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
         "@babel/core": "^7.18.5",
         "@babel/preset-env": "^7.18.2",
         "@babel/preset-typescript": "^7.17.12",
+        "@types/lodash": "^4.14.182",
         "@types/node": "^18.0.0",
         "@typescript-eslint/eslint-plugin": "^5.29.0",
         "@typescript-eslint/parser": "^5.29.0",
         "babel-loader": "^8.2.5",
+        "concurrently": "^7.2.2",
         "eslint": "^8.18.0",
         "eslint-plugin-react": "^7.30.1",
         "html-webpack-plugin": "^5.5.0",
@@ -32,11 +34,15 @@
         "rimraf": "^3.0.2",
         "ts-node": "^10.8.1",
         "typescript": "^4.7.4",
+        "wait-on": "^6.0.1",
         "webpack": "^5.73.0",
         "webpack-cli": "^4.10.0",
         "webpack-dev-server": "^4.9.2"
     },
     "scripts": {
         "prepare": "husky install"
+    },
+    "dependencies": {
+        "lodash": "^4.17.21"
     }
 }
