--- a/pro/package.json
+++ b/pro/package.json
@@ -3,16 +3,21 @@
     "version": "1.0.0",
     "license": "MIT",
     "scripts": {
-        "start": "npm run dev && ",
+        "start": "concurrently -n=render,main -c=green,blue \"npm run dev\" \"npm run dev:ele\"",
+        "debug": "concurrently -n=render,main -c=green,blue \"npm run dev\" \"npm run dev:debug\"",
         "dev": "webpack serve -c webpack.config.dev.ts",
-        "build:main": "rimraf dist/main && webpack -c webpack.config.main.ts && electon ./dist/main/main.js",
-        "build": "rimraf dist/render && webpack -c webpack.config.prod.ts"
+        "dev:debug": "npm run build:main && wait-on tcp:12345 && electron ./dist/main/main.js --inspect=5858",
+        "dev:ele": "npm run build:main && wait-on tcp:12345 &&  electron ./dist/main/main.js",
+        "build:main": "rimraf dist/main && webpack -c webpack.config.main.ts",
+        "build:render": "rimraf dist/render && webpack -c webpack.config.prod.ts",
+        "build": "npm run build:render & npm run build:main"
     },
     "dependencies": {
         "@emotion/react": "^11.9.3",
         "@emotion/styled": "^11.9.3",
         "@mui/material": "^5.8.6",
         "classnames": "^2.3.1",
+        "electron": "^19.0.7",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.3.0"
