--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "prepare": "husky install"
     },
     "dependencies": {
+        "axios": "^0.27.2",
         "lodash": "^4.17.21"
     }
 }
