--- a/pro/package.json
+++ b/pro/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "@emotion/react": "^11.9.3",
         "@emotion/styled": "^11.9.3",
+        "@mui/icons-material": "^5.8.4",
         "@mui/material": "^5.8.6",
         "classnames": "^2.3.1",
         "electron": "^19.0.7",
