--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@typescript-eslint/parser": "^5.29.0",
         "babel-loader": "^8.2.5",
         "concurrently": "^7.2.2",
+        "copy-webpack-plugin": "^11.0.0",
         "eslint": "^8.18.0",
         "eslint-plugin-react": "^7.30.1",
         "html-webpack-plugin": "^5.5.0",
