--- a/pro/package.json
+++ b/pro/package.json
@@ -17,11 +17,14 @@
         "@emotion/styled": "^11.9.3",
         "@mui/icons-material": "^5.8.4",
         "@mui/material": "^5.8.6",
+        "@reduxjs/toolkit": "^1.8.3",
         "classnames": "^2.3.1",
         "electron": "^19.0.7",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.3.0"
+        "react-redux": "^8.0.2",
+        "react-router-dom": "^6.3.0",
+        "redux": "^4.2.0"
     },
     "devDependencies": {
         "@babel/preset-react": "^7.17.12",
