--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "@babel/core": "^7.18.5",
         "@babel/preset-env": "^7.18.2",
         "@babel/preset-typescript": "^7.17.12",
-        "@types/lodash": "^4.14.182",
+        "@types/lodash-es": "^4.17.6",
         "@types/node": "^18.0.0",
         "@typescript-eslint/eslint-plugin": "^5.29.0",
         "@typescript-eslint/parser": "^5.29.0",
@@ -45,6 +45,6 @@
     },
     "dependencies": {
         "axios": "^0.27.2",
-        "lodash": "^4.17.21"
+        "lodash-es": "^4.17.21"
     }
 }
