--- a/pro/package.json
+++ b/pro/package.json
@@ -2,24 +2,24 @@
     "name": "pro",
     "version": "1.0.0",
     "license": "MIT",
+    "author": {
+        "name": "cuirongfeng"
+    },
+    "description": "full stack frontend",
+    "main": "./dist/main/main.js",
     "scripts": {
-        "start": "concurrently -n=render,main -c=green,blue \"npm run dev\" \"npm run dev:ele\"",
-        "debug": "concurrently -n=render,main -c=green,blue \"npm run dev\" \"npm run dev:debug\"",
-        "dev": "webpack serve -c webpack.config.dev.ts",
-        "dev:debug": "npm run build:main && wait-on tcp:12345 && electron ./dist/main/main.js --inspect=5858",
-        "dev:ele": "npm run build:main && wait-on tcp:12345 &&  electron ./dist/main/main.js",
+        "start": "npm run dev",
+        "debug": "concurrently -n=render,main -c=green,blue \"npm run dev:render\" \"npm run dev:debug\"",
+        "dev": "concurrently -n=render,main -c=green,blue \"npm run dev:render\" \"npm run dev:main\"",
+        "dev:render": "webpack serve -c webpack.config.dev.ts",
+        "dev:debug": "npm run build:main && wait-on tcp:12345 && electron . --inspect=5858",
+        "dev:main": "npm run build:main && wait-on tcp:12345 &&  electron .",
         "build:main": "rimraf dist/main && webpack -c webpack.config.main.ts",
         "build:render": "rimraf dist/render && webpack -c webpack.config.prod.ts",
-        "build": "npm run build:render & npm run build:main"
+        "prebuild": "concurrently -n=render,main -c=green,blue \"npm run build:render\" \"npm run build:main\"",
+        "build": "ts-node electronBuilder.ts"
     },
     "dependencies": {
-        "@emotion/react": "^11.9.3",
-        "@emotion/styled": "^11.9.3",
-        "@mui/icons-material": "^5.8.4",
-        "@mui/material": "^5.8.6",
-        "@reduxjs/toolkit": "^1.8.3",
-        "classnames": "^2.3.1",
-        "electron": "^19.0.7",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^8.0.2",
@@ -28,9 +28,17 @@
     },
     "devDependencies": {
         "@babel/preset-react": "^7.17.12",
+        "@emotion/react": "^11.9.3",
+        "@emotion/styled": "^11.9.3",
+        "@mui/icons-material": "^5.8.4",
+        "@mui/material": "^5.8.6",
+        "@reduxjs/toolkit": "^1.8.3",
         "@types/react": "^18.0.14",
         "@types/react-dom": "^18.0.5",
+        "classnames": "^2.3.1",
         "css-loader": "^6.7.1",
+        "electron": "^19.0.7",
+        "electron-builder": "^23.1.0",
         "less": "^4.1.3",
         "less-loader": "^11.0.0",
         "style-loader": "^3.3.1"
