--- a/pro/package.json
+++ b/pro/package.json
@@ -12,8 +12,8 @@
         "debug": "concurrently -n=render,main -c=green,blue \"npm run dev:render\" \"npm run dev:debug\"",
         "dev": "concurrently -n=render,main -c=green,blue \"npm run dev:render\" \"npm run dev:main\"",
         "dev:render": "webpack serve -c webpack.config.dev.ts",
-        "dev:debug": "npm run build:main && wait-on tcp:12345 && electron . --inspect=5858",
-        "dev:main": "npm run build:main && wait-on tcp:12345 &&  electron .",
+        "dev:debug": "ts-node watch.ts --debug",
+        "dev:main": "ts-node watch.ts",
         "build:main": "rimraf dist/main && webpack -c webpack.config.main.ts",
         "build:render": "rimraf dist/render && webpack -c webpack.config.prod.ts",
         "prebuild": "concurrently -n=render,main -c=green,blue \"npm run build:render\" \"npm run build:main\"",
