--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
         "@babel/preset-env": "^7.18.2",
         "@babel/preset-typescript": "^7.17.12",
         "@types/lodash-es": "^4.17.6",
+        "@types/minimist": "^1.2.2",
         "@types/node": "^18.0.0",
+        "@types/wait-on": "^5.3.1",
         "@typescript-eslint/eslint-plugin": "^5.29.0",
         "@typescript-eslint/parser": "^5.29.0",
         "babel-loader": "^8.2.5",
+        "chalk": "^5.0.1",
         "concurrently": "^7.2.2",
         "copy-webpack-plugin": "^11.0.0",
         "eslint": "^8.18.0",
@@ -31,6 +34,8 @@
         "html-webpack-plugin": "^5.5.0",
         "husky": "^8.0.1",
         "lint-staged": "^13.0.2",
+        "minimist": "^1.2.6",
+        "ora": "^6.1.2",
         "prettier": "^2.7.1",
         "rimraf": "^3.0.2",
         "ts-node": "^10.8.1",
