--- a/pro/package.json
+++ b/pro/package.json
@@ -27,14 +27,12 @@
         "redux": "^4.2.0"
     },
     "devDependencies": {
+        "@ant-design/icons": "^4.7.0",
         "@babel/preset-react": "^7.17.12",
-        "@emotion/react": "^11.9.3",
-        "@emotion/styled": "^11.9.3",
-        "@mui/icons-material": "^5.8.4",
-        "@mui/material": "^5.8.6",
         "@reduxjs/toolkit": "^1.8.3",
         "@types/react": "^18.0.14",
         "@types/react-dom": "^18.0.5",
+        "antd": "^4.21.5",
         "classnames": "^2.3.1",
         "css-loader": "^6.7.1",
         "electron": "^19.0.7",
