--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
         "css-loader": "^6.7.1",
         "electron": "^19.0.7",
         "electron-builder": "^23.1.0",
+        "electron-store": "^8.0.2",
         "less": "^4.1.3",
         "less-loader": "^11.0.0",
         "style-loader": "^3.3.1"
