--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
         "build": "rimraf dist && webpack -c webpack.config.ts"
     },
     "dependencies": {
-        "express": "^4.18.1"
+        "express": "^4.18.1",
+        "mongodb": "^4.8.0"
     },
     "devDependencies": {
         "@types/express": "^4.17.13"
