--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
         "@reduxjs/toolkit": "^1.8.3",
         "@types/react": "^18.0.14",
         "@types/react-dom": "^18.0.5",
+        "@types/react-transition-group": "^4.4.5",
         "antd": "^4.21.5",
         "classnames": "^2.3.1",
         "css-loader": "^6.7.1",
@@ -40,6 +41,7 @@
         "electron-store": "^8.0.2",
         "less": "^4.1.3",
         "less-loader": "^11.0.0",
+        "react-transition-group": "^4.4.2",
         "style-loader": "^3.3.1"
     }
 }
