--- a/client/package.json
+++ b/client/package.json
@@ -39,8 +39,10 @@
         "electron": "^19.0.7",
         "electron-builder": "^23.1.0",
         "electron-store": "^8.0.2",
+        "i18next": "^21.8.14",
         "less": "^4.1.3",
         "less-loader": "^11.0.0",
+        "react-i18next": "^11.18.1",
         "react-transition-group": "^4.4.2",
         "style-loader": "^3.3.1"
     }
