--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -3,6 +3,7 @@
     "compilerOptions": {
         "jsx": "react",
         "baseUrl": ".",
+        "resolveJsonModule": true,
         "paths": {
             "@/*": ["src/render/*"],
             "@main/*": ["src/main/*"]
