--- a/server/package.json
+++ b/server/package.json
@@ -7,10 +7,13 @@
         "build": "rimraf dist && webpack -c webpack.config.ts"
     },
     "dependencies": {
+        "cors": "^2.8.5",
         "express": "^4.18.1",
-        "mongodb": "^4.8.0"
+        "mongodb": "^4.8.0",
+        "socket.io": "^4.5.1"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13"
     }
 }
