--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
         "@ant-design/icons": "^4.7.0",
         "@babel/preset-react": "^7.17.12",
         "@reduxjs/toolkit": "^1.8.3",
+        "@types/mousetrap": "^1.6.9",
         "@types/react": "^18.0.14",
         "@types/react-dom": "^18.0.5",
         "@types/react-transition-group": "^4.4.5",
@@ -42,6 +43,7 @@
         "i18next": "^21.8.14",
         "less": "^4.1.3",
         "less-loader": "^11.0.0",
+        "mousetrap": "^1.6.5",
         "react-i18next": "^11.18.1",
         "react-transition-group": "^4.4.2",
         "socket.io-client": "^4.5.1",
