--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
     "license": "MIT",
     "scripts": {
         "start": "ts-node app.ts",
-        "build": "rimraf dist && webpack -c webpack.config.ts"
+        "build": "rimraf dist && webpack -c webpack.config.ts",
+        "build:tsc": "tsc"
     },
     "dependencies": {
         "cors": "^2.8.5",
