--- a/client/package.json
+++ b/client/package.json
@@ -34,9 +34,11 @@
         "@types/react": "^18.0.14",
         "@types/react-dom": "^18.0.5",
         "@types/react-transition-group": "^4.4.5",
+        "ahooks": "^3.5.2",
         "antd": "^4.21.5",
         "classnames": "^2.3.1",
         "css-loader": "^6.7.1",
+        "dayjs": "^1.11.3",
         "electron": "^19.0.7",
         "electron-builder": "^23.1.0",
         "electron-store": "^8.0.2",
