--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
         "electron": "^19.0.7",
         "electron-builder": "^23.1.0",
         "electron-store": "^8.0.2",
+        "form-data": "^4.0.0",
         "i18next": "^21.8.14",
         "less": "^4.1.3",
         "less-loader": "^11.0.0",
