--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
     },
     "devDependencies": {
         "@types/cors": "^2.8.12",
-        "@types/express": "^4.17.13"
+        "@types/express": "^4.17.13",
+        "@types/multer": "^1.4.7",
+        "multer": "^1.4.5-lts.1"
     }
 }
