--- a/server/package.json
+++ b/server/package.json
@@ -8,12 +8,14 @@
         "build:tsc": "tsc"
     },
     "dependencies": {
+        "busboy": "^1.6.0",
         "cors": "^2.8.5",
         "express": "^4.18.1",
         "mongodb": "^4.8.0",
         "socket.io": "^4.5.1"
     },
     "devDependencies": {
+        "@types/busboy": "^1.5.0",
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
         "@types/multer": "^1.4.7",
