--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,10 @@
     "dependencies": {
         "busboy": "^1.6.0",
         "cors": "^2.8.5",
+        "dayjs": "^1.11.4",
         "express": "^4.18.1",
+        "lodash": "^4.17.21",
+        "lodash-es": "^4.17.21",
         "mongodb": "^4.8.0",
         "socket.io": "^4.5.1"
     },
@@ -18,6 +21,8 @@
         "@types/busboy": "^1.5.0",
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
+        "@types/lodash": "^4.14.182",
+        "@types/lodash-es": "^4.17.6",
         "@types/multer": "^1.4.7",
         "multer": "^1.4.5-lts.1"
     }
