--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@types/wait-on": "^5.3.1",
         "@typescript-eslint/eslint-plugin": "^5.29.0",
         "@typescript-eslint/parser": "^5.29.0",
+        "asar": "^3.1.0",
         "babel-loader": "^8.2.5",
         "chalk": "^5.0.1",
         "concurrently": "^7.2.2",
