--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
     "name": "client",
     "version": "1.0.0",
     "license": "MIT",
+    "homepage": "./",
     "author": {
         "name": "cuirongfeng"
     },
