--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
         "ahooks": "^3.5.2",
         "antd": "^4.21.5",
         "classnames": "^2.3.1",
+        "copy-webpack-plugin": "^11.0.0",
         "css-loader": "^6.7.1",
         "dayjs": "^1.11.3",
         "electron": "^19.0.7",
